$NetBSD: CHANGES-2021,v 1.4895 2021/09/20 13:01:45 mef Exp $

Changes to the packages collection and infrastructure in 2021:

	Updated devel/R-git2r to 0.27.1 [mef 2021-01-01]
	Updated devel/R-rlang to 0.4.9 [mef 2021-01-01]
	Updated devel/R-cli to 2.2.0 [mef 2021-01-01]
	Updated devel/R-testthat to 3.0.1 [mef 2021-01-01]
	Updated net/mikutter to 4.1.3 [tsutsui 2021-01-01]
	Added lang/R-cpp11 version 0.2.4 [mef 2021-01-01]
	Updated devel/R-pkgbuild to 1.2.0 [mef 2021-01-01]
	Added devel/R-gert version 1.0.2 [mef 2021-01-01]
	Added devel/R-rappdirs version 0.3.1 [mef 2021-01-01]
	Added devel/R-testit version 0.12 [mef 2021-01-01]
	Updated devel/boost-libs to 1.75.0 [ryoon 2021-01-01]
	Updated devel/boost-build to 1.75.0 [ryoon 2021-01-01]
	Updated devel/boost-docs to 1.75.0 [ryoon 2021-01-01]
	Updated devel/boost-headers to 1.75.0 [ryoon 2021-01-01]
	Updated devel/boost-jam to 1.75.0 [ryoon 2021-01-01]
	Updated devel/boost-mpi to 1.75.0 [ryoon 2021-01-01]
	Updated devel/py-boost to 1.75.0 [ryoon 2021-01-01]
	Updated meta-pkgs/boost to 1.75.0 [ryoon 2021-01-01]
	Updated fonts/harfbuzz to 2.7.4 [ryoon 2021-01-01]
	Updated fonts/harfbuzz-icu to 2.7.4 [ryoon 2021-01-01]
	Updated textproc/icu to 68.2 [ryoon 2021-01-01]
	Updated mail/mutt to 2.0.4 [tron 2021-01-01]
	Updated audio/pulseaudio to 14.0 [ryoon 2021-01-01]
	Updated devel/R-usethis to 2.0.0 [mef 2021-01-01]
	Added devel/R-pkgcache version 1.1.1 [mef 2021-01-01]
	Added devel/R-lpSolve version 5.6.15 [mef 2021-01-01]
	Updated net/dbip-asn-lite to 2021.01 [fcambus 2021-01-01]
	Updated net/dbip-city-lite to 2021.01 [fcambus 2021-01-01]
	Updated net/dbip-country-lite to 2021.01 [fcambus 2021-01-01]
	Added devel/R-pak version 0.1.2.1 [mef 2021-01-01]
	Updated net/drill to 1.7.1 [he 2021-01-01]
	Updated emulators/vice to 3.5 [rhialto 2021-01-01]
	Updated devel/cbindgen to 0.16.0 [ryoon 2021-01-01]
	Updated www/firefox to 84.0.1 [ryoon 2021-01-01]
	Updated www/firefox-l10n to 84.0.1 [ryoon 2021-01-01]