@@ -1,2 +1,0 @@
-Display of maps. Projection code and larger maps are in separate
-packages (mapproj and mapdata).
