@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2021,v 1.4895 2021/09/20 13:01:45 mef Exp $
+$NetBSD: CHANGES-2021,v 1.4896 2021/09/20 13:09:37 mef Exp $
 
 Changes to the packages collection and infrastructure in 2021:
 
@@ -7543,3 +7543,4 @@ Changes to the packages collection and infrastructure in 2021:
 	mk/bsd.pkg.mk: started freeze for pkgsrc-2021Q3 branch [wiz 2021-09-20]
 	Updated geography/R-raster to 3.4.13 [mef 2021-09-20]
 	Updated geography/R-stars to 0.5.3 [mef 2021-09-20]
+	Removed math/R-maps successor geography/R-maps [mef 2021-09-20]
